๊Update post.php,verify.php and register.html
Update post.php verify.php and register.html

--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
         <tr><td colspan="2" align="center"><input type="submit" value="Login"></td></tr>
     </table>
     <br>
-    <center><a href="index.html">กลับไปหน้าหลัก</a></center>  
+    <center><a href="index.php">กลับไปหน้าหลัก</a></center>  
     </form>
 </body>
 </html>
